--- a/package.json
+++ b/package.json
@@ -3,30 +3,51 @@
   "version": "1.0.0",
   "description": "",
   "private": true,
-  "main": "index.js",
+  "main": "server/src/server.ts",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs",
   "workspaces": [
     "client",
     "server"
   ],
   "scripts": {
+    "client": "npx vite",
+    "start": "npm run server",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "concurrently \"npm run dev:client\" \"npm run dev:server\"",
-    "dev:client": "cd client && npm run dev",
-    "dev:server": "cd server && npm run dev"
+    "dev": "concurrently \"vite\" \"tsx watch ./server/src/server.ts\"",
+    "server": "nodemon --exec tsx server/src/server.ts",
+    "build": "vite build"
   },
   "devDependencies": {
-    "concurrently": "^8.2.2"
+    "concurrently": "^8.2.2",
+    "nodemon": "^3.1.10"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/12o-clockCommit/espresso-chat.git"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
   "bugs": {
     "url": "https://github.com/12o-clockCommit/espresso-chat/issues"
   },
-  "homepage": "https://github.com/12o-clockCommit/espresso-chat#readme"
+  "homepage": "https://github.com/12o-clockCommit/espresso-chat#readme",
+  "dependencies": {
+    "express": "^5.1.0",
+    "moment": "^2.30.1",
+    "socket.io": "^4.8.1",
+    "@types/express": "^5.0.3",
+    "@vitejs/plugin-react-swc": "^4.0.1",
+    "concurrently": "^9.2.1",
+    "dotenv": "^17.2.3",
+    "mongodb": "^6.20.0",
+    "mongoose": "^8.18.0",
+    "nodemon": "^3.1.10",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "tsx": "^4.20.5",
+    "vite": "^7.1.4"
+  }
 }
