--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "concurrently": "^8.2.2",
     "nodemon": "^3.1.10"
   },
-  "repository": {
+  "re`po`sitory": {
     "type": "git",
     "url": "git+https://github.com/12o-clockCommit/espresso-chat.git"
   },
@@ -33,13 +33,13 @@
   },
   "homepage": "https://github.com/12o-clockCommit/espresso-chat#readme",
   "dependencies": {
-    "express": "^5.1.0",
-    "moment": "^2.30.1",
-    "socket.io": "^4.8.1",
     "@types/express": "^5.0.3",
     "@vitejs/plugin-react-swc": "^4.0.1",
     "concurrently": "^9.2.1",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "moment": "^2.30.1",
     "mongodb": "^6.20.0",
     "mongoose": "^8.18.0",
     "nodemon": "^3.1.10",
@@ -47,6 +47,7 @@
     "react-dom": "^16.5.2",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "socket.io": "^4.8.1",
     "tsx": "^4.20.5",
     "vite": "^7.1.4"
   }
