--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
   "bugs": {
     "url": "https://github.com/12o-clockCommit/espresso-chat/issues"
   },
-  "homepage": "https://github.com/12o-clockCommit/espresso-chat#readme"
+  "homepage": "https://github.com/12o-clockCommit/espresso-chat#readme",
+  "dependencies": {
+    "socket.io-client": "^4.8.1"
+  }
 }
