--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "moment": "^2.30.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router-dom": "^7.9.5",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
