--- a/server/package.json
+++ b/server/package.json
@@ -18,8 +18,10 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "moment": "^2.30.1",
     "mongoose": "^8.19.2",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "unique-names-generator": "^4.7.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
